Add existing project files to Git

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,6 +6,11 @@
       <%= f.label :name, class: label_class %>
       <%= f.text_field :name, class: input_class %>
     </div>
+    
+    <div class="mb-6">
+      <%= f.label :username, class: label_class %>
+      <%= f.text_field :username, class: input_class %>
+    </div>
 
     <div class="mb-6">
       <%= f.label :email, class: label_class %>
